create audio worker